update manuscript with the latest

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -76,13 +76,13 @@
 \begin{document}
 
 \begin{flushleft}
-{\Large \textbf{Supplementary Information for ``Emergence of the Southeast Asian islands as a driver for Neogene cooling''}}
+{\Large \textbf{Supporting Information for ``Emergence of the Southeast Asian islands as a driver for Neogene cooling''}}
 
 Yuem Park\textsuperscript{1},
 Pierre Maffre\textsuperscript{1},
 Yves Godd\'eris\textsuperscript{3},
 Francis A. Macdonald\textsuperscript{2},
-Eliel A. Anttila\textsuperscript{2},
+Eliel S. C. Anttila\textsuperscript{2},
 Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \bigskip
@@ -98,7 +98,7 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \linenumbers
 
-These supplementary information materials provide details on the model framework used in this study. The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
+These supplementary information materials provide details on the model framework used in this study. The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state/releases/tag/v1.0}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
 
 \section*{Implementation of Lithology}
 
@@ -173,7 +173,7 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
 
 Experimental determinations of the activation energy ($E_a$; Equations 6 and 9) associated with the weathering of silicate minerals are variable \citep{Brantley2003a}. However, multiple efforts to invert for $E_a$ in basaltic watersheds with varying temperature have yielded values (41.6 $\pm$ 3.2~kJ/mol in \citealp{Li2016a}; 42.3~kJ/mol in \citealp{Dessert2001a}) that are consistent with the lower end of activation energies of Ca+Mg bearing minerals in laboratory experiments such as that for diopside (40.5 $\pm$ 1.7~kJ/mol; \citealp{Knauss1993a}) and for labradorite (42.1~kJ/mol; \citealp{Carroll2005a}). We use the value of 42~kJ/mol in our model runs. While we implement lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies.
 
-Within the equation that governs the physical erosion rate in GEOCLIM (Equation 8), the values of the exponents ($m=0.5$ and $n=1$) are supported by compilations \citep{Lague2013a}. However, there is uncertainty in the value of the proportionality constant ($k_e$). We therefore tune this value such that the total erosion flux in the model under present-day slope and runoff conditions (see below) matches the total erosion flux estimated in \citet{Milliman2013a} ($20\times10^{12}$~kg/yr). Assuming that the density of eroded materials is 2500~kg/m$^{3}$, our tuned $k_e$ value is 0.0029110~m$^{1-m}$/yr$^{1-m}$.
+Within the equation that governs the physical erosion rate in GEOCLIM (Equation 8), the values of the exponents ($m=0.5$ and $n=1$) are supported by compilations \citep{Lague2013a}. However, there is uncertainty in the value of the proportionality constant ($k_e$). Using the simplification of a uniform value, we therefore tune this value such that the total erosion flux in the model under present-day slope and runoff conditions (see below) matches the total erosion flux estimated in \citet{Milliman2013a} ($20\times10^{12}$~kg/yr). Assuming that the density of eroded materials is 2500~kg/m$^{3}$, our tuned $k_e$ value is 0.0029110~m$^{1-m}$/yr$^{1-m}$.
 
 Within the equations that govern the chemical weathering rate in GEOCLIM, we identify the less constrained parameters: the proportionality constant that modifies the dependence of dissolution rate on runoff and temperature ($k_{d}$; Equation 9), the proportionality constant that modifies the dependence of dissolution rate on runoff only ($k_{w}$; Equation 9), the power constant that modifies the dependence of dissolution rate on the time that a rock particle has spent in the regolith ($\sigma$; Equation 4), and the proportionality constant that modifies the dependence of regolith production on runoff and temperature ($k_{rp}$; Equation 6). Furthermore, the Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are difficult to define. We allow these parameters to vary within reasonable bounds during the calibration stage of GEOCLIM. In total, we test 93,600 unique parameter combinations (Fig. \ref{fig:r2_cross_plot}; Table \ref{tab:parameter_combinations}).
 
@@ -251,7 +251,7 @@ Given that precipitation in the SEAI is primarily driven by large-scale convecti
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.7\textwidth]{Figures/paleogeographic_reconstructions.pdf}
+    \includegraphics[width=0.6\textwidth]{Figures/paleogeographic_reconstructions.pdf}
     \caption{Paleogeographically-reconstructed paleoshorelines for SEAI at 5, 10, and 15~Ma, using the paleoshoreline reconstruction of this study coupled to the paleogeographic model of \citet{Matthews2016a}.}
     \label{fig:paleogeographic_reconstructions}
 \end{figure}
@@ -263,11 +263,11 @@ To explore the sensitivity of our results to the inclusion of the Sunda Shelf an
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/pCO2_proxies.pdf}
-    \caption{Proxy-based \pCOtwo estimates for the past 20~m.y. For data that were compiled within \citet{Foster2017a}, error bars indicate standardized uncertainties. For the \citet{Ji2018a} data, error bars represent the 16-84$^{th}$ percentile of resampled estimates. The \citet{Bereiter2015a} data come from the EPICA Dome C ice core.}
+    \caption{Proxy-based \pCOtwo estimates for the past 20~m.y. For data that were compiled within \citet{Foster2017a}, error bars indicate standardized uncertainties. For the \citet{Ji2018a} data, error bars represent the 16-84$^{th}$ percentile of resampled estimates. Individual data points from \citet{Cui2020a} were not published with uncertainties. The \citet{Bereiter2015a} data come from the EPICA Dome C ice core.}
     \label{fig:pCO2_proxies}
 \end{figure}
 
-Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
+Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a, Cui2020a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Statistical methods that are often utilized in an attempt to extract trends from this data (e.g. locally-weighted scatter plot smoothing, LOWESS) evaluate the mean (with some weighting) of the highly scattered data in a given time interval. However, such methods are only appropriate for estimating the ``true'' value at any given time interval in datasets in which individual data points are being drawn from a single distribution about a mean value. The \pCOtwo proxy compilation shown in Figure \ref{fig:pCO2_proxies} consists of several distinct techniques and samples, each with their own set of assumptions and associated probability distributions that influence their reported values. Therefore, simply taking the mean of these values neglects the fact that some of these techniques/samples are more reliable others. Constraining how robust each \pCOtwo proxy technique is remains an important challenge, and as such the ``true'' \pCOtwo could plausibly lie anywhere within the full range of proxy-based \pCOtwo estimates for any given time interval. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
@@ -287,11 +287,11 @@ Separated from the Paleozoic continental core of SW Borneo by the Lupar Line sut
 
 \subsection*{Sulawesi}
 
-For the paleoshorelines of Sulawesi, we largely followed the recent stratigraphic compilation and paleoshorelines compilation of \citet{Nugraha2018a}. Geographically, Sulawesi can be divided into a central highland region flanked by North, South, Southeast, and East Arms. These arms have high relief ($>$3~km) that are separated by deep basins and broadly define Sulawesi's seven tectonic provinces: 1) the West Sulawesi magmatic arc of the South Arm, 2) the Central Sulawesi metamorphic Belt, 3) the Sangihe arc of the North Arm, 4) the East Sulawesi Ophiolite of the East Arm, 5) the southeast metamorphic belt of the Southeast Arm, and the microcontinental blocks of 6) Banggai-Sula and 7) Buton-Tukang Besi \citep{Hamilton1979a, Katili1978a}. Like SW Borneo, the North and South Arms, and much of Central Sulawesi, are underlain by continental blocks that rifted off of the Australian-Birds Head margin in the Jurassic and collided in the Cretaceous with Eurasian basement of Sundaland as part of the Woyla Arc system \citep{Parkinson1998b, Hennig2016a, Hall2017a, Hennig2017a}. After collision, subduction polarity reversed and a Cretaceous to Miocene SE-facing volcanic arc developed \citep{Polve1997a, Elburg1998a} that was connected to the paleo-Sunda Arc \citep{Hall2002b}, also referred to as the Great Indonesian arc \citep{Harris2006a}.  The ophiolites of Sulawesi were generated in this arc system in a back-arc to intra-arc setting \citep{Monnier1995a} (but see \citealp{Kadarusman2004a} for an alternative view) and the largest fragments of the East Sulawesi ophiolite were detached from their metamorphic sole in the late Oligocene (32--28~Ma; \citealp{Parkinson1998a}) and thrust to the east above a west dipping slab (East Sulawesi block; \citealp{Villeneuve2001a}). During the Early to Middle Miocene, the Tukang Besi-Buton block began to collide obliquely with the southeastern end of the Sunda Arc, causing ophiolite emplacement in West and SE Sulawesi, including Buton \citep{Smith1991a, Bergman1996a}. 
+For the paleoshorelines of Sulawesi, we largely followed the recent stratigraphic compilation and paleoshorelines compilation of \citet{Nugraha2018a}. Geographically, Sulawesi can be divided into a central highland region flanked by North, South, Southeast, and East Arms. These arms have high relief ($>$3~km) that are separated by deep basins and broadly define Sulawesi's seven tectonic provinces: 1) the West Sulawesi magmatic arc of the South Arm, 2) the Central Sulawesi metamorphic Belt, 3) the Sangihe arc of the North Arm, 4) the East Sulawesi Ophiolite of the East Arm, 5) the southeast metamorphic belt of the Southeast Arm, and the microcontinental blocks of 6) Banggai-Sula and 7) Buton-Tukang Besi \citep{Hamilton1979a, Katili1978a}. Like SW Borneo, the North and South Arms, and much of Central Sulawesi, are underlain by continental blocks that rifted off of the Australian-Birds Head margin in the Jurassic and collided in the Cretaceous with Eurasian basement of Sundaland as part of the Woyla Arc system \citep{Parkinson1998b, Hennig2016a, Hall2017a, Hennig2017a}. After collision, subduction polarity reversed and a Cretaceous to Miocene SE-facing volcanic arc developed \citep{Polve1997a, Elburg1998a} that was connected to the paleo-Sunda Arc \citep{Hall2002b}, also referred to as the Great Indonesian arc \citep{Harris2006a}.  The ophiolites of Sulawesi were generated in this arc system in a back-arc to intra-arc setting \citep{Monnier1995a} (but see \citealp{Kadarusman2004a} for an alternative view) and the largest fragments of the East Sulawesi ophiolite were detached from their metamorphic sole in the late Oligocene (32--28~Ma; \citealp{Parkinson1998a}) and thrust to the east above a west dipping slab (East Sulawesi block; \citealp{Villeneuve2001a}). During the Early to Middle Miocene, the Tukang Besi-Buton block began to collide obliquely with the southeastern end of the Sunda Arc, causing ophiolite emplacement in West and SE Sulawesi, including Buton \citep{Smith1991a, Bergman1996a}.
 
-The North Arm consists of Late Pliocene and younger volcanic rocks built upon Eocene to Early Miocene oceanic basalt, basaltic andesite, pelagic sediments, and metamorphic rocks \citep{Elburg1998a}. Eocene to Early Miocene volcanic rocks formed above a NW dipping slab in an arc system that extended to West and South Sulawesi \citep{vanLeeuwen2005a}. Gorontalo Bay is an extensional basin that formed in the Pliocene, and prior to that time, the East Sulawesi was attached to the North Arm of Sulawesi. After the Oligocene to Early Miocene accretion of the East Sulawesi ophiolite, the arc system stepped out to the SE forming a Neogene (23--16~Ma) volcanic belt on the East arm \citep{Kadarusman2004a}. In the Late Miocene, SE-dipping subduction was initiated below the North Arm, which continues today at the North Sulawesi Trough. North Sulawesi was not substantially emergent until the Pliocene \citep{vanLeeuwen2005a}. Active volcanoes extend from the North Arm through the Sangihe Arc into the southern Philippines. 
+The North Arm consists of Late Pliocene and younger volcanic rocks built upon Eocene to Early Miocene oceanic basalt, basaltic andesite, pelagic sediments, and metamorphic rocks \citep{Elburg1998a}. Eocene to Early Miocene volcanic rocks formed above a NW dipping slab in an arc system that extended to West and South Sulawesi \citep{vanLeeuwen2005a}. Gorontalo Bay is an extensional basin that formed in the Pliocene, and prior to that time, the East Sulawesi was attached to the North Arm of Sulawesi. After the Oligocene to Early Miocene accretion of the East Sulawesi ophiolite, the arc system stepped out to the SE forming a Neogene (23--16~Ma) volcanic belt on the East arm \citep{Kadarusman2004a}. In the Late Miocene, SE-dipping subduction was initiated below the North Arm, which continues today at the North Sulawesi Trough. North Sulawesi was not substantially emergent until the Pliocene \citep{vanLeeuwen2005a}. Active volcanoes extend from the North Arm through the Sangihe Arc into the southern Philippines.
 
-The East and Southeast Arms consist predominantly of mafic and ultramafic rocks of the East Sulawesi Ophoilite that are exposed for more than 10,000~km$^{2}$ \citep{Monnier1995a}. The East Arm preserves a complete ophiolitic sequence underlain by a metamorphic sole, m\'elange, imbricate continental margin and crystalline basement with a blueschist metamorphic overprint \citep{Silver1983a, Monnier1995a, Parkinson1998a}. Locally, the structural thickness of the ophiolite exceeds 15~km with surface relief over 3~km \citep{Kadarusman2004a}. Seventeen igneous K-Ar dates from the East Sulawesi ophiolite range from 93--32~Ma, clustering between 60~Ma and 40~Ma \citep{Parkinson1998b}. K-Ar dates on hornblende from the metamorphic sole yielded cooling ages between 36--23~Ma \citep{Parkinson1998a, Villeneuve2001a}, which dates the initial emplacement of the East Sulawesi ophiolite as the north Sulawesi volcanic arc was underthrusted by the Sula spur (Australian crust) \citep{Silver1983a, Parkinson1998a}; however, despite these relatively old ages of emplacement, it appears that the ophiolites on the East Arm were not substantially subaerially exposed and exhumed until the Miocene.  
+The East and Southeast Arms consist predominantly of mafic and ultramafic rocks of the East Sulawesi Ophoilite that are exposed for more than 10,000~km$^{2}$ \citep{Monnier1995a}. The East Arm preserves a complete ophiolitic sequence underlain by a metamorphic sole, m\'elange, imbricate continental margin and crystalline basement with a blueschist metamorphic overprint \citep{Silver1983a, Monnier1995a, Parkinson1998a}. Locally, the structural thickness of the ophiolite exceeds 15~km with surface relief over 3~km \citep{Kadarusman2004a}. Seventeen igneous K-Ar dates from the East Sulawesi ophiolite range from 93--32~Ma, clustering between 60~Ma and 40~Ma \citep{Parkinson1998b}. K-Ar dates on hornblende from the metamorphic sole yielded cooling ages between 36--23~Ma \citep{Parkinson1998a, Villeneuve2001a}, which dates the initial emplacement of the East Sulawesi ophiolite as the north Sulawesi volcanic arc was underthrusted by the Sula spur (Australian crust) \citep{Silver1983a, Parkinson1998a}; however, despite these relatively old ages of emplacement, it appears that the ophiolites on the East Arm were not substantially subaerially exposed and exhumed until the Miocene.
 
 Collision of the Sula-Banggai block with the East margin of Sulawesi began in the latest Miocene and uplift accelerated in the early Pliocene (5.2~Ma to 3.8~Ma) and is associated with a major pulse of sedimentation in adjacent basins \citep{Davies1990a, Villeneuve2000a}. Off the northeast margin of the east arm of Sulawesi, Miocene platform carbonates on the Sula-Banggai block are overlain by Late Miocene to Early Pliocene ophiolite detritus in the Celebes m\'elange \citep{Davies1990a}. Thus, although the East Sulawesi ophiolite was trapped/emplaced onto the composite Sundaland margin (i.e. a fragment of previously accreted Australian crust) between 36~Ma and 23~Ma, mafic and ultramafic rocks on the south and west arms appear to have not been substantially subaerially exposed in the south and west arms until after 15~Ma, and on the east arm until after 5~Ma.
 
@@ -341,7 +341,7 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
 % \end{figure}
 
 % \begin{table}[h!]
-% \caption{Geochemical properties of sources used in the seawater model presented in Figure \ref{fig:seawater_model}.} 
+% \caption{Geochemical properties of sources used in the seawater model presented in Figure \ref{fig:seawater_model}.}
 % \begin{center}
 %     \begin{tabular}{lcccc}
 %     \hline
@@ -356,7 +356,7 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
 %     hydrothermal exchange & 0.7030$^{4}$ & n/a$^{6}$ & n/a$^{6}$ & n/a$^{6}$ \\
 %     \hline
 %     \end{tabular}
-    
+
 %     \scriptsize
 % 	\flushleft \emph{Notes:} \\
 %     $^{1}$ Calculated to account for $^{87}$Rb decay following the equations of \citet{Papanastassiou1968a}.\\
